Add better labels colormap (TY Utz), make plots look better

--- a/setup.cfg
+++ b/setup.cfg
@@ -31,17 +31,17 @@ project_urls =
 [options]
 packages = find:
 install_requires =
-    numpy
-    magicgui
-    qtpy
-    scikit-image
-    toolz
-    scikit-learn
-    psygnal
-    superqt
-    zarr
-    xgboost
-    matplotlib
+    numpy<2.0.0
+    magicgui>=0.8.1
+    qtpy>=2.4.1
+    scikit-image>=0.22.0
+    toolz>=0.12.0
+    scikit-learn>=1.3.2
+    psygnal>=0.9.5
+    superqt>=0.6.1
+    zarr>=2.16.1
+    xgboost>=2
+    matplotlib>=3.8.2
 
 python_requires = >=3.8
 include_package_data = True
