--- a/setup.cfg
+++ b/setup.cfg
@@ -1,10 +1,10 @@
 [metadata]
-name = cryocanvas
-version = attr: cryocanvas.__version__
-description = A plugin for interactive segmentation of CryoET data using ML embeddings
+name = cellcanvas
+version = attr: cellcanvas.__version__
+description = A tool for painting in cellular architecture
 long_description = file: README.md
 long_description_content_type = text/markdown
-url = https://github.com/kephale/cryocanvas
+url = https://github.com/cellcanvas/cellcanvas
 author = Kyle Harrington
 author_email = czii@kyleharrington.com
 license = MIT
@@ -23,10 +23,10 @@ classifiers =
     Programming Language :: Python :: 3.10
     Topic :: Scientific/Engineering :: Image Processing
 project_urls =
-    Bug Tracker = https://github.com/kephale/cryocanvas/issues
-    Documentation = https://github.com/kephale/cryocanvas#README.md
-    Source Code = https://github.com/kephale/cryocanvas
-    User Support = https://github.com/kephale/cryocanvas/issues
+    Bug Tracker = https://github.com/cellcanvas/cellcanvas/issues
+    Documentation = https://github.com/cellcanvas/cellcanvas#README.md
+    Source Code = https://github.com/cellcanvas/cellcanvas
+    User Support = https://github.com/cellcanvas/cellcanvas/issues
 
 [options]
 packages = find:
@@ -55,7 +55,7 @@ where = src
 
 [options.entry_points]
 napari.manifest =
-    cryocanvas = cryocanvas:napari.yaml
+    cellcanvas = cellcanvas:napari.yaml
 
 [options.extras_require]
 testing =
