--- a/src/cellcanvas/napari.yaml
+++ b/src/cellcanvas/napari.yaml
@@ -1,5 +1,5 @@
-name: cryocanvas
-display_name: cryocanvas
+name: cellcanvas
+display_name: cellcanvas
 # use 'hidden' to remove plugin from napari hub search results
 visibility: public
 # see https://napari.org/stable/plugins/manifest.html for valid categories
@@ -7,5 +7,5 @@ categories: ["Annotation", "Segmentation"]
 contributions:
   commands:
   widgets:
-    - command: cryocanvas.make_qwidget
+    - command: cellcanvas.make_qwidget
       display_name: Example QWidget
