[WIP] Add Segmentmanager (#17)
* add lockable labels

* remove unused code

* add pycharm files to gitignore

* update docstring

* Segmentmanager fill with paintable features (#1)

* Add monkey patching fill function

* overwrite fill function of labels layer

* Tests for paintable features for paint and fill

* test for concrete values after painting

* update docstring

---------

Co-authored-by: Lorenz Lamm <Lorenz.Lamm@helmholtz-muenchen.de>

* add method stubs

* add mouse click selection

* fix imports

* add label selection

* create instance module

* add viewer to tests

* add widgets

---------

Co-authored-by: LorenzLamm <34575029+LorenzLamm@users.noreply.github.com>
Co-authored-by: Lorenz Lamm <Lorenz.Lamm@helmholtz-muenchen.de>

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+.idea
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -62,7 +64,6 @@ db.sqlite3
 db.sqlite3-journal
 
 # Flask stuff:
-instance/
 .webassets-cache
 
 # Scrapy stuff:
