Update build infra (#34)
* add starfile writer for points

* add github actions

* add pre-commit

* switch to setuptools_scm for versioning

* exclude _version.py

* skip widget test

--- a/setup.cfg
+++ b/setup.cfg
@@ -49,8 +49,7 @@ python_requires = >=3.8
 include_package_data = True
 package_dir =
     =src
-
-# add your package requirements here
+setup_requires = setuptools_scm
 
 [options.packages.find]
 where = src
@@ -67,6 +66,10 @@ testing =
     pytest-qt  # https://pytest-qt.readthedocs.io/en/latest/
     napari
     pyqt5
+
+dev =
+    %(testing)s
+    pre-commit
 
 
 [options.package_data]
