--- a/setup.cfg
+++ b/setup.cfg
@@ -33,6 +33,7 @@ packages = find:
 install_requires =
     numpy<2.0.0
     magicgui>=0.8.1
+    mrcfile
     qtpy>=2.4.1
     scikit-image>=0.22.0
     toolz>=0.12.0
