--- a/setup.cfg
+++ b/setup.cfg
@@ -39,6 +39,7 @@ install_requires =
     toolz>=0.12.0
     scikit-learn>=1.3.2
     pyclesperanto-prototype
+    pymeshfix
     psygnal>=0.9.5
     superqt>=0.6.1
     starfile
