--- a/setup.cfg
+++ b/setup.cfg
@@ -42,6 +42,7 @@ install_requires =
     pymeshfix
     psygnal>=0.9.5
     superqt>=0.6.1
+    surforama
     starfile
     zarr>=2.16.1
     xgboost>=2
