Add missing deps (#36)
* add mrcfile

* add pymeshfix

* add surforama

--- a/setup.cfg
+++ b/setup.cfg
@@ -33,13 +33,16 @@ packages = find:
 install_requires =
     numpy<2.0.0
     magicgui>=0.8.1
+    mrcfile
     qtpy>=2.4.1
     scikit-image>=0.22.0
     toolz>=0.12.0
     scikit-learn>=1.3.2
     pyclesperanto-prototype
+    pymeshfix
     psygnal>=0.9.5
     superqt>=0.6.1
+    surforama
     starfile
     zarr>=2.16.1
     xgboost>=2
